testcases/semantic/valid/array2.rs
fn main() {
    const C: usize = 2;
    let A: [u32; 2] = [0; 2]; // Literal.
    let B: [u32; C] = [0; 2]; // Constant item.
    let D: [u32; 2] = [0, 1]; 
    exit(0);
}
