testcases/semantic/invalid/array2.rs
fn main() {
    const C: usize = 1;
    let A: [u32; 2] = [0; 1]; 
    let B: [u32; 2] = [0; 2];
    exit(0);
}
